ログイン機能実装、ナビバー作成

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,19 +7,60 @@
 
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+
+  <!-- bootstrap -->
+  <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
 </head>
 
+<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+  <a href="/" class="navbar-brand">Top</a>
+  <button class="navbar-toggler" type="button"
+          data-toggle="collapse"
+          data-target="#navmenu1"
+          aria-controls="navmenu1"
+          aria-expanded="false"
+          aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navmenu1">
+    <div class="navbar-nav">
+      <% if user_signed_in? %>
+        <%= link_to '新規投稿', new_post_path, class: "nav-item nav-link" %> 
+        <!--<a class="nav-item nav-link" href ="/post_form/<%= @user_id %>"><i class="fas fa-plus"></i>新規投稿</a>-->
+        <div class="dropdown">
+          <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <% @nickname = User.find_by(id: current_user.id) %>
+            <%= @nickname.email %>
+          </button>
+          <div class="dropdown-menu" aria-labelledby="dropdownMenu1">
+            <%= link_to "マイページを表示", user_path(current_user.id), class: 'dropdown-item' %>
+            <%= link_to "サインアウト", destroy_user_session_path, method: :delete, class: 'dropdown-item' %>
+          </div>
+        </div>
+        <a class="nav-item nav-link" href ="/user_list/<%= @user_id %>"><i class="fas fa-users"></i>ユーザー一覧</a>
+      <% else %>
+<!--        <a class="nav-item nav-link" href ="/create_account/">新規登録</a>-->
+        <%= link_to "新規登録", new_user_registration_path, class: 'nav-item nav-link' %>
+<!--        <a class="nav-item nav-link" href ="/signin">サインイン</a>-->
+        <%= link_to "サインイン", new_user_session_path, class: 'nav-item nav-link' %>
+      <% end %>
+    </div>
+  </div>
+</nav>
+
 <body>
-<% if user_signed_in? %>
-  <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
-  <%= link_to "トップ", posts_path %>
-  <%= link_to '投稿画面へ', new_post_path %> 
-  <!-- 以下の記述を追記 -->
-  <%= link_to 'マイページへ', user_path(current_user.id) %> 
-  <% else %>
-  <%= link_to "ログイン", new_user_session_path, class: 'post' %>
-  <%= link_to "新規登録", new_user_registration_path, class: 'post' %>
-  <% end %>
+<!--<% if user_signed_in? %>-->
+<!--  <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>-->
+<!--  <%= link_to "トップ", posts_path %>-->
+<!--  <%= link_to '投稿画面へ', new_post_path %> -->
+
+<!--  <%= link_to 'マイページへ', user_path(current_user.id) %> -->
+<!--<% else %>-->
+<!--  <%= link_to "ログイン", new_user_session_path, class: 'post' %>-->
+<!--  <%= link_to "新規登録", new_user_registration_path, class: 'post' %>-->
+<!--<% end %>-->
   <%= yield %>
   </body>
   </html>
