--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,5 @@
 <h1>購入商品一覧</h1>
+<%= image_tag("header.jpg", :alt => "アイコン") %>
 <% if user_signed_in? %>
   <% @posts.each do |post| %>
     <p><%= post.title %>：<%= post.category %>：会員No.<%= post.user.id %></p>
