--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,6 +51,7 @@
 </nav>
 
 <body>
+
 <!--<% if user_signed_in? %>-->
 <!--  <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>-->
 <!--  <%= link_to "トップ", posts_path %>-->
@@ -61,6 +62,9 @@
 <!--  <%= link_to "ログイン", new_user_session_path, class: 'post' %>-->
 <!--  <%= link_to "新規登録", new_user_registration_path, class: 'post' %>-->
 <!--<% end %>-->
-  <%= yield %>
-  </body>
-  </html>
+  <div class="container">
+    <%= yield %>
+  </div>
+
+</body>
+</html>
