--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,17 @@
+<div class="user_profile mt-5 mb-5">
+  <div class="icon text-center">
+    <img src="/images/profile/<%= @user_image %>" width="200px">
+  </div>
+  <div class="name text-center">
+    <h1><%= @user_name %></h1>
+  </div>
+  <div class="text-center">
+    <button type="button" class="btn btn-secondary">
+      <a class="btn btn-default" href="/profile_edit/<%= @user_id %>">プロフィールを編集する</a>
+    </button>
+  </div>
+</div>
+
 <% @posts.each do |post| %>
   <p><%= post.title %>：<%= post.category %></p>
 <% end %>
