投稿一覧、ユーザー一覧画面作成

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -6,7 +6,7 @@
   <!-- ここから -->
   <!--  ニックネーム入力欄-->
   <div class="field">
-    <%= f.label :nickname %> <em>(10 characters maximum)</em><br />
+    <%= f.label :ニックネーム %> <em>(10 文字以内)</em><br />
     <%= f.text_field :nickname, autofocus: true, maxlength: "10" ,:size=>"30" %>
   </div>
   <!-- ここまで -->
