--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,9 @@
   <div class="collapse navbar-collapse" id="navmenu1">
     <div class="navbar-nav">
       <% if user_signed_in? %>
-        <%= link_to '新規投稿', new_post_path, class: "nav-item nav-link" %> 
+        <%= link_to new_post_path, class: "nav-item nav-link" do %>
+          <i class="fas fa-plus"></i>新規投稿
+        <% end %>
         <!--<a class="nav-item nav-link" href ="/post_form/<%= @user_id %>"><i class="fas fa-plus"></i>新規投稿</a>-->
         <div class="dropdown">
           <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -39,11 +41,11 @@
             <%= link_to "サインアウト", destroy_user_session_path, method: :delete, class: 'dropdown-item' %>
           </div>
         </div>
-        <a class="nav-item nav-link" href ="/user_list/<%= @user_id %>"><i class="fas fa-users"></i>ユーザー一覧</a>
+        <%= link_to users_path, class: "nav-item nav-link" do %>
+          <i class="fas fa-users"></i>ユーザー一覧
+        <% end %>
       <% else %>
-<!--        <a class="nav-item nav-link" href ="/create_account/">新規登録</a>-->
         <%= link_to "新規登録", new_user_registration_path, class: 'nav-item nav-link' %>
-<!--        <a class="nav-item nav-link" href ="/signin">サインイン</a>-->
         <%= link_to "サインイン", new_user_session_path, class: 'nav-item nav-link' %>
       <% end %>
     </div>
@@ -51,20 +53,8 @@
 </nav>
 
 <body>
-
-<!--<% if user_signed_in? %>-->
-<!--  <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>-->
-<!--  <%= link_to "トップ", posts_path %>-->
-<!--  <%= link_to '投稿画面へ', new_post_path %> -->
-
-<!--  <%= link_to 'マイページへ', user_path(current_user.id) %> -->
-<!--<% else %>-->
-<!--  <%= link_to "ログイン", new_user_session_path, class: 'post' %>-->
-<!--  <%= link_to "新規登録", new_user_registration_path, class: 'post' %>-->
-<!--<% end %>-->
   <div class="container">
     <%= yield %>
   </div>
-
 </body>
 </html>
