画像投稿機能追加、ユーザー一覧画面に画像表示できるよう修正

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -11,6 +11,13 @@
   </div>
   <!-- ここまで -->
 
+  <!--  プロフィール画像設定 ここから-->
+  <div class="field">
+    <%= f.label :image %> <em>(profile image)</em><br />
+    <%= f.file_field :image %>
+  </div>
+  <!--  プロフィール画像設定 ここまで-->
+
   <div class="field">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
