--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -6,10 +6,17 @@
   <!-- ここから -->
   <!--  ニックネーム入力欄-->
   <div class="field">
-    <%= f.label :ニックネーム %> <em>(10 文字以内)</em><br />
+    <%= f.label :nickname %> <em>(10 文字以内)</em><br />
     <%= f.text_field :nickname, autofocus: true, maxlength: "10" ,:size=>"30" %>
   </div>
   <!-- ここまで -->
+
+  <!--  プロフィール画像設定 ここから-->
+  <div class="field">
+    <%= f.label :image %> <em>(profile image)</em><br />
+    <%= f.file_field :image %>
+  </div>
+  <!--  プロフィール画像設定 ここまで-->
 
   <div class="field">
     <%= f.label :email %><br />
