--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -6,7 +6,7 @@
       <div class="col-xl-4 col-md-6 col-sm-12">
         <!-- Content -->
         <!-- <h2><%= post.title %></h2> -->
-        <a href='/show/<%= post['id'] %>/<%= @user_id %>'><img src="/images/post/<%= post['product_image'] %>"></a>
+        <%= link_to image_tag("kotonoha.png"), :action => "index" %>
         <p>投稿者:<%= post.user.nickname %></p>
       </div>
     <% end %>
