--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -18,12 +18,13 @@
     </div>
   </div>
   <!-- 画像を選択 -->
-<!--  <div class="form-group row">-->
-<!--    <label class="col-md-3 col-form-label" for="product_image">商品画像を選択</label>-->
-<!--    <div class="col-md-9">-->
-<!--      <input type="file" name="product_image" id="product_image" class="file_choice" required>-->
-<!--    </div>-->
-<!--  </div>-->
+  <div class="form-group row">
+    <label class="col-md-3 col-form-label" for="product_image">商品画像を選択</label>
+    <div class="col-md-9">
+      <%= f.file_field :product_image %>
+    <!--<input type="file" name="product_image" id="product_image" class="file_choice" required>-->
+    </div>
+  </div>
   <!-- 商品へのリンク -->
 <!--  <div class="form-group row">-->
 <!--    <label class="col-md-3 col-form-label" for="product_link">商品リンク</label>-->
