--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,11 +7,12 @@
   </div>
   <div class="text-center">
     <button type="button" class="btn btn-secondary">
-      <%= link_to "プロフィールを編集する", "/users/edit" %>
+      <%#= link_to "プロフィールを編集する", "/users/edit" %>
+      <%= link_to "プロフィールを編集する", edit_user_registration_path %>
     </button>
 
     <button type="button" class="btn btn-secondary">
-    <%= link_to "削除する", "/users", method: :delete %>
+    <%= link_to "削除する", "/users", method: :delete, data: {confirm: "ユーザーを削除しますか?"} %>
     </button>
 
   </div>
@@ -24,9 +25,11 @@
 <div class="row show_images text-center">
   <% @posts.each do |post| %>
     <div class="col-xl-4 col-md-6 col-sm-12 mb-5">
-       <h3><%= post.title %></h3>
-      <a href='/show/<%= post['id'] %>/<%= @user_id %>'><img src="/images/post/<%= post['product_image'] %>"></a>
-      <p><a href='/'>一覧に戻る</a> | <a href='/edit/<%= post['id'] %>/<%= @user_id %>'>編集</a> | <a href='/destroy_check/<%= post['id'] %>/<%= @user_id %>'>削除</a></p>
+      <h3><%= post.title %></h3>
+      <%= link_to post_path(post), class: "nav-item nav-link" do %>
+        <%= image_tag post.product_image_url(:thumb) %>
+      <% end %>
+      <%= link_to '削除', post_path(post), method: :delete, data: {confirm: "投稿を削除しますか?"}  %>
     </div>
   <% end %>
 </div>
