--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,8 +6,9 @@
   <% @users.each do |user| %>
     <div class="col-xl-4 col-md-6 col-sm-12">
       <!-- Content -->
-<!--      <a href='/user/<%#= @user_id %>/<%#= user['user_id'] %>'><img src="/images/profile/<%#= user['profile_image_name'] %>"></a>-->
-      <%= image_tag user.image_url(:thumb) %>
+      <%= link_to user_path(user), class: "nav-item nav-link" do %>
+        <%= image_tag user.image_url(:thumb) %>
+      <% end %>
       <p><%= user.nickname %></p>
     </div>
   <% end %>
