--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,9 +11,9 @@
       <%= link_to "プロフィールを編集する", edit_user_registration_path %>
     </button>
 
-    <button type="button" class="btn btn-secondary">
-    <%= link_to "削除する", "/users", method: :delete, data: {confirm: "ユーザーを削除しますか?"} %>
-    </button>
+<!--    <button type="button" class="btn btn-secondary">-->
+    <%#= link_to "削除する", "/users", method: :delete, data: {confirm: "ユーザーを削除しますか?"} %>
+<!--    </button>-->
 
   </div>
 </div>
