商品編集機能、商品リンク機能 追加

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -13,7 +13,9 @@
     <h3 class="pt-3 pb-3 text-center"><%= @post.title %></h3>
     <p class="text-center">カテゴリ：<%= @post.category %></p>
     <div class="buttons text-center mb-3">
-      <a class="btn btn-lg btn-outline-warning" href="<%= @product_link %>"><i class="fab fa-amazon"></i>Amazonで詳しく見る</a>
+      <%= link_to @post.product_link, class: "btn btn-lg btn-outline-warning" do %>
+        <i class="fab fa-amazon"></i>Amazonで詳しく見る
+      <% end %>
     </div>
     <div class="buttons text-center">
       <% if @like_check.nil? %>
@@ -29,7 +31,7 @@
 <% @comments.each do |comment| %>
   <div class="row posts" id="<%= comment['comment_id'] %>">
     <div class="col-md-2 posts-user">
-      <%= link_to user_path(comment.user_id), class: "nav-item nav-link" do %>
+      <%= link_to user_path(comment.user_id) do %>
         <%= image_tag comment.user.image_url(:thumb), :size => "100x100" %>
       <% end %>
       <p><%= comment.user.nickname %></p>
@@ -82,7 +84,6 @@
   </div>
 <% end %>
 
-<%= link_to "口コミを投稿する", new_comment_path %>
 <div class="text-center mt-5 mb-5">
   <h2>口コミ投稿する</h2>
 </div>
@@ -111,8 +112,3 @@
   </div>
   <input type="submit" value="内容を送信">
 <% end %>
-
-<%#= @post_id %>
-
-<!--今見ているのpost_idを表示させる-->
-<%= cookies[:post_id] %>
