口コミ編集・削除機能実装

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -41,7 +41,7 @@
 
         <p>口コミ投稿日時：<%= comment.created_at  %></p>
         <h4 class="mb-3">評価：<%= comment.score %>点</h4>
-        <p><%= comment.comment_text %></p>
+        <p><%= simple_format(comment.comment_text) %></p>
         <% unless comment.comment_image.blank? %>
           <img width="200px" src="<%= comment.comment_image %>" type="button" data-toggle="modal" data-target="#exampleModalScrollable<%= comment.id %>" style="cursor: pointer">
           <!-- Modal -->
@@ -71,10 +71,10 @@
       <div class="col-md-12 edit-button">
         <div class="comment_delete">
           <button type="button" class="btn btn-secondary">
-            <a href="/comment_edit/<%= @post_id %>/<%= @user_id %>/<%= comment['comment_id'] %>" class="btn btn-default">口コミを編集</a>
+            <%= link_to '口コミを編集', edit_comment_path(comment), class: "btn btn-default"  %>
           </button>
           <button type="button" class="btn btn-secondary">
-            <a href="/comment_delete/<%= @post_id %>/<%= @user_id %>/<%= comment['comment_id'] %>" class="btn btn-default">口コミを削除</a>
+            <%= link_to '口コミを削除', comment_path(comment), class: "btn btn-default", method: :delete, data: {confirm: "口コミを削除しますか?"}  %>
           </button>
         </div>
       </div>
