ユーザー詳細ページのタブ部分作り始めた

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -26,9 +26,54 @@
       </div>
     <% end %>
   <% end %>
-
 </div>
 
+<!-- タブボタン部分 -->
+<ul class="nav nav-tabs">
+  <li class="nav-item">
+    <a href="#tab1" class="nav-link" data-toggle="tab">フォロー<span class="badge badge-secondary"><%= @follow_count%></sppan></a>
+  </li>
+  <li class="nav-item">
+    <a href="#tab2" class="nav-link" data-toggle="tab">フォロワー<span class="badge badge-secondary"><%= @follower_count %></span></a>
+  </li>
+  <li class="nav-item">
+    <a href="#tab3" class="nav-link" data-toggle="tab">お気に入り<span class="badge badge-secondary"><%= @like_count %></span></a>
+  </li>
+</ul>
+
+<!--タブのコンテンツ部分-->
+<!--<div class="tab-content">-->
+<!--  <div id="tab1" class="tab-pane active">-->
+    <%# @follow_list.each do |follow_user| %>
+<!--      <div class="follow_user_image p-2">-->
+<!--        <a href='/user/<%#= @user_id %>/<%#= follow_user['follow_user_id'] %>'>-->
+<!--          <img src="/images/profile/<%#= follow_user['profile_image_name'] %>" width="75px">-->
+          <%#= follow_user['user_name'] %>
+<!--        </a>-->
+<!--      </div>-->
+    <%# end %>
+<!--  </div>-->
+<!--  <div id="tab2" class="tab-pane">-->
+    <%# @follower_list.each do |follower_user| %>
+<!--      <div class="follow_user_image p-2">-->
+<!--        <a href='/user/<%#= @user_id %>/<%#= follower_user['follower_user_id'] %>'>-->
+<!--          <img src="/images/profile/<%#= follower_user['profile_image_name'] %>" width="75px">-->
+          <%#= follower_user['user_name'] %>
+<!--        </a>-->
+<!--      </div>-->
+    <%# end %>
+<!--  </div>-->
+<!--  <div id="tab3" class="tab-pane">-->
+    <%# @like_list.each do |like_post| %>
+<!--      <div class="follow_user_image p-2">-->
+<!--        <a href='/show/<%#= like_post['id'] %>/<%#= @user_id %>'>-->
+<!--          <img src="/images/post/<%#= like_post['product_image'] %>" width="75px">-->
+          <%#= like_post['title'] %>
+<!--        </a>-->
+<!--      </div>-->
+    <%# end %>
+<!--  </div>-->
+<!--</div>-->
 
 <!-- 投稿一覧 -->
 <div class="text-center mt-5 mb-5">
