フラッシュメッセージ実装

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -39,41 +39,61 @@
   <li class="nav-item">
     <a href="#tab3" class="nav-link" data-toggle="tab">お気に入り<span class="badge badge-secondary"><%= @like_count %></span></a>
   </li>
+  <!--  今見ているユーザーが、currentuserなのか判定-->
+  <% if current_user.id.to_s == params[:id] %>
+    <li class="nav-item">
+      <a href="#tab4" class="nav-link" data-toggle="tab">タイムライン</a>
+    </li>
+  <% end %>
 </ul>
 
 <!--タブのコンテンツ部分-->
-<!--<div class="tab-content">-->
-<!--  <div id="tab1" class="tab-pane active">-->
-    <%# @follow_list.each do |follow_user| %>
-<!--      <div class="follow_user_image p-2">-->
-<!--        <a href='/user/<%#= @user_id %>/<%#= follow_user['follow_user_id'] %>'>-->
-<!--          <img src="/images/profile/<%#= follow_user['profile_image_name'] %>" width="75px">-->
-          <%#= follow_user['user_name'] %>
-<!--        </a>-->
-<!--      </div>-->
-    <%# end %>
-<!--  </div>-->
-<!--  <div id="tab2" class="tab-pane">-->
-    <%# @follower_list.each do |follower_user| %>
-<!--      <div class="follow_user_image p-2">-->
-<!--        <a href='/user/<%#= @user_id %>/<%#= follower_user['follower_user_id'] %>'>-->
-<!--          <img src="/images/profile/<%#= follower_user['profile_image_name'] %>" width="75px">-->
-          <%#= follower_user['user_name'] %>
-<!--        </a>-->
-<!--      </div>-->
-    <%# end %>
-<!--  </div>-->
-<!--  <div id="tab3" class="tab-pane">-->
-    <%# @like_list.each do |like_post| %>
-<!--      <div class="follow_user_image p-2">-->
-<!--        <a href='/show/<%#= like_post['id'] %>/<%#= @user_id %>'>-->
-<!--          <img src="/images/post/<%#= like_post['product_image'] %>" width="75px">-->
-          <%#= like_post['title'] %>
-<!--        </a>-->
-<!--      </div>-->
-    <%# end %>
-<!--  </div>-->
-<!--</div>-->
+<div class="tab-content">
+  <div id="tab1" class="tab-pane active">
+    <% @follow_list.each do |follow_user| %>
+      <div class="follow_user_image p-2">
+        <%= link_to user_path(follow_user), class: "nav-item nav-link" do %>
+          <%= image_tag follow_user.image_url(:thumb), :width => "75" %>
+          <%= follow_user.nickname %>
+        <% end %>
+      </div>
+    <% end %>
+  </div>
+  <div id="tab2" class="tab-pane">
+    <% @follower_list.each do |follower_user| %>
+      <div class="follow_user_image p-2">
+        <%= link_to user_path(follower_user), class: "nav-item nav-link" do %>
+          <%= image_tag follower_user.image_url(:thumb), :width => "75" %>
+          <%= follower_user.nickname %>
+        <% end %>
+      </div>
+    <% end %>
+  </div>
+  <div id="tab3" class="tab-pane">
+    <% @like_list.each do |like_post| %>
+      <div class="follow_user_image p-2">
+        <%= link_to post_path(like_post), class: "nav-item nav-link" do %>
+          <%= image_tag like_post.product_image_url(:thumb), :width => "75" %>
+          <%= like_post.title %>
+        <% end %>
+      </div>
+    <% end %>
+  </div>
+  <!-- フォローした人の投稿をタイムラインとして表示 -->
+  <div id="tab4" class="tab-pane">
+    <% @post_list.each do |post| %>
+      <div class="follow_user_image p-2">
+        <%= image_tag post.user.image_url(:thumb), :width => "75" %>
+        <%= link_to post_path(post) do %>
+          <div class="balloon1-left">
+            <p><%= post.title %></p>
+            <%= image_tag post.product_image_url(:thumb), :width => "75" %>
+          </div>
+        <% end %>
+      </div>
+    <% end %>
+  </div>
+</div>
 
 <!-- 投稿一覧 -->
 <div class="text-center mt-5 mb-5">
