ransack カテゴリ検索機能追加（プルダウン）

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,14 @@
 <%= image_tag("header.jpg", :width => "100%", :alt => "化粧品・服・ウィッグの口コミを投稿しよう！") %>
 <% if user_signed_in? %>
 
+  <%= search_form_for @q do |f| %>
+
+    <%#= f.label :title_cont %>
+    <%= f.search_field :title_cont %>
+    <%= f.collection_select(:category_cont, @category, :category, :category, :include_blank => true) %>
+    <%= f.submit %>
+  <% end %>
+
   <div class="row show_images text-center">
     <% @posts.each do |post| %>
       <div class="col-xl-4 col-md-6 col-sm-12">
