titleタグを自動で変わるようにする

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>LoginSample4</title>
+  <title><%= yield(:title) %> | 女装アイテム口コミアプリ</title>
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
 
