--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,4 @@
+<% provide(:title, "#{@user.nickname}の詳細ページ") %>
 <div class="user_profile mt-5 mb-5">
   <div class="icon text-center">
     <%= image_tag @user.image_url(:thumb) %>
